# christmas-2025

./: README.md
javascript/: .gitignore  README.md  config.json  main.js  package.json
javascript/src/anni/: analyser.js
javascript/src/anni/calculator/: calculator.js
javascript/src/anni/requests/: requests.js  responsetypes.js
javascript/src/anni/types/: datatypes.js  settings.js
javascript/src/data/: data-schema.json  sample-data.json
javascript/src/testharness/: testharness.js
python/: README.md  main.py  pyproject.toml
python/src/anni/: analyser.py
python/src/anni/calculator/: calculator.py
python/src/anni/requests/: requests.py  responsetypes.py
python/src/anni/types/: datatypes.py  settings.py
python/src/testharness/: testharness.py
