[project]
name = "christmas-kata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.11.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
]

[tool.anni-settings]
team_name = "rowantest" # put your team name here
base_url = "https://lscc.lifeatcodurance.com/"
team_secret = "rowantest-secret-$1874"

